--- a/web/css/style.css
+++ b/web/css/style.css
@@ -36,6 +36,28 @@ p {
   padding: 0 20px;
 }
 
+.text-primary {
+  color: #f7c08a;
+}
+
+.lead {
+  font-size: 20px;
+}
+
+.btn {
+  display: inline-block;
+  color: #fff;
+  background-color: #333;
+  padding: 13px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  color: #333;
+  background-color: #f7c08a;
+}
+
 /* navbar */
 #navbar {
   background-color: #333;
@@ -70,4 +92,27 @@ p {
 #navbar ul li a:hover {
   background-color: #444;
   color: #ff8833;
+}
+
+/* showcase */
+
+#showcase {
+  background: url("../img/showcase.jpg") no-repeat center center/cover;
+  height: 600px;
+}
+
+#showcase .showcase-content {
+  color: #fff;
+  padding-top: 170px;
+  text-align: center;
+}
+
+#showcase .showcase-content h1 {
+  font-size: 60px;
+  line-height: 1.2em;
+}
+
+#showcase .showcase-content p {
+  padding-bottom: 20px;
+  line-height: 1.7em;
 }
